<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtName"
        android:text="@string/txtName"
        android:textStyle="bold"
        android:textColor="@color/header_color"
        android:textSize="@dimen/di_30sp"
        android:layout_marginTop="@dimen/di_24dp"
        android:layout_marginLeft="@dimen/di_12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

<ImageView
    android:id="@+id/icon_image"
    android:src="@drawable/place_icon"
    android:layout_width="@dimen/di_24dp"
    android:layout_height="@dimen/di_24dp"
    app:layout_constraintTop_toBottomOf="@+id/txtName"
    android:layout_marginTop="@dimen/di_12dp"
    app:layout_constraintLeft_toLeftOf="@id/txtName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtLocation"
        android:id="@+id/txtLocation"
        android:textSize="@dimen/di_20sp"
        android:textColor="@color/text_color"
        app:layout_constraintTop_toBottomOf="@+id/txtName"
        app:layout_constraintLeft_toRightOf="@+id/icon_image"
        android:layout_marginTop="@dimen/di_12dp"
        android:layout_marginLeft="@dimen/di_4dp"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="210dp"
        android:id="@+id/profile_image"
        android:src="@drawable/profile"
        app:layout_constraintTop_toTopOf="@id/txtName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/txtName"
        android:scaleType="centerCrop"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnFollow"
        android:text="@string/btnFollow"
        android:textColor="@color/text_color"
        android:textSize="@dimen/di_20sp"
        android:background="@drawable/figure_shape"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/icon_image"
        app:layout_constraintLeft_toLeftOf="@id/txtName"
       app:layout_constraintBottom_toBottomOf="@id/profile_image"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtA"
        android:textSize="@dimen/di_20sp"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:text="@string/txtA"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="@dimen/di_12dp"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintLeft_toLeftOf="@id/txtName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtB"
        android:textSize="@dimen/di_20sp"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:text="@string/txtB"
        app:layout_constraintLeft_toRightOf="@id/txtA"
        app:layout_constraintTop_toTopOf="@id/txtA"
        android:layout_marginLeft="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPost"
        android:textSize="@dimen/di_20sp"
        android:textColor="@color/text_color"
        android:text="@string/txtPost"
        app:layout_constraintLeft_toLeftOf="@id/txtA"
        app:layout_constraintTop_toBottomOf="@id/txtA"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtFollower"
        android:textSize="@dimen/di_20sp"
        android:textColor="@color/text_color"
        android:text="@string/txtFollower"
        app:layout_constraintLeft_toLeftOf="@id/txtB"
        app:layout_constraintTop_toBottomOf="@id/txtB"
        ></TextView>

    <ImageView
        android:layout_width="@dimen/di_100dp"
        android:layout_height="@dimen/di_120dp"
        android:id="@+id/imgOne"
        android:src="@drawable/image_one"
        android:scaleType="centerCrop"
        android:layout_marginTop="@dimen/di_20dp"
        app:layout_constraintLeft_toLeftOf="@id/txtName"
        app:layout_constraintRight_toLeftOf="@id/imgTwo"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@id/txtPost"
        />
    <ImageView
        android:layout_width="@dimen/di_100dp"
        android:layout_height="@dimen/di_120dp"
        android:id="@+id/imgTwo"
        android:src="@drawable/image_two"
        android:scaleType="centerCrop"
        app:layout_constraintRight_toLeftOf="@id/imgThree"
        app:layout_constraintLeft_toRightOf="@id/imgOne"
        app:layout_constraintTop_toTopOf="@id/imgOne"/>

    <ImageView
        android:layout_width="@dimen/di_100dp"
        android:layout_height="@dimen/di_120dp"
        android:id="@+id/imgThree"
        android:src="@drawable/image_three"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toRightOf="@id/imgTwo"
        app:layout_constraintRight_toLeftOf="@id/imgFour"
        app:layout_constraintTop_toTopOf="@id/imgOne"
        />

    <ImageView
        android:layout_width="@dimen/di_100dp"
        android:layout_height="@dimen/di_120dp"
        android:id="@+id/imgFour"
        android:src="@drawable/image_four"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toRightOf="@id/imgThree"
        app:layout_constraintRight_toLeftOf="@id/imgFive"
        app:layout_constraintTop_toTopOf="@id/imgOne"/>

    <ImageView
        android:layout_width="@dimen/di_100dp"
        android:layout_height="@dimen/di_120dp"
        android:id="@+id/imgFive"
        android:src="@drawable/image_five"
        android:scaleType="centerCrop"
        android:layout_marginRight="@dimen/di_20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/imgOne"
        app:layout_constraintLeft_toRightOf="@id/imgFour"
        />

<ImageView
    android:layout_width="@dimen/di_24dp"
    android:layout_height="@dimen/di_24dp"
    android:id="@+id/ic_one"
    android:src="@drawable/icon_one"
    app:layout_constraintRight_toLeftOf="@+id/ic_two"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/imgOne"
    app:layout_constraintHorizontal_chainStyle="spread"
    android:layout_marginTop="@dimen/di_24dp"
    />

    <ImageView
        android:layout_width="@dimen/di_24dp"
        android:layout_height="@dimen/di_24dp"
        android:id="@+id/ic_two"
        android:src="@drawable/icon_two"
        app:layout_constraintRight_toLeftOf="@+id/ic_three"
        app:layout_constraintLeft_toRightOf="@+id/ic_one"
        app:layout_constraintTop_toTopOf="@+id/ic_one"
        />

    <ImageView
        android:layout_width="@dimen/di_24dp"
        android:layout_height="@dimen/di_24dp"
        android:src="@drawable/icon_three"
        android:id="@+id/ic_three"
        app:layout_constraintRight_toLeftOf="@+id/ic_four"
        app:layout_constraintLeft_toRightOf="@+id/ic_two"
        app:layout_constraintTop_toTopOf="@+id/ic_one"
        />

    <ImageView
        android:layout_width="@dimen/di_24dp"
        android:layout_height="@dimen/di_24dp"
        android:id="@+id/ic_four"
        android:src="@drawable/icon_four"
        app:layout_constraintLeft_toRightOf="@id/ic_three"
        app:layout_constraintRight_toLeftOf="@+id/ic_five"
        app:layout_constraintTop_toTopOf="@+id/ic_one"
      />

    <ImageView
        android:layout_width="@dimen/di_24dp"
        android:layout_height="@dimen/di_24dp"
        android:id="@+id/ic_five"
        android:src="@drawable/icon_five"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/ic_four"
        app:layout_constraintTop_toTopOf="@+id/ic_one"
        android:layout_marginRight="@dimen/di_20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtAbout"
        android:text="@string/txtAbout"
        android:textColor="@color/header_color"
        android:textSize="@dimen/di_30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/txtName"
        app:layout_constraintTop_toBottomOf="@+id/ic_one"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtDes"
        android:text="@string/txtDes"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        app:layout_constraintLeft_toLeftOf="@+id/txtName"
        app:layout_constraintTop_toBottomOf="@+id/txtAbout"
        android:layout_marginTop="@dimen/di_12dp"
        app:layout_constraintRight_toRightOf="@+id/imgFive"
        />
</androidx.constraintlayout.widget.ConstraintLayout>